resolved chat alignment issue

--- a/src/pages/chats/Chats.module.css
+++ b/src/pages/chats/Chats.module.css
@@ -19,6 +19,7 @@
   
   .chatFormControl {
     height: 30px;
+    width:200px
   }
   
   .chatCardContainer {
@@ -97,13 +98,26 @@
   }
   
   .bigInput {
-    width: 100%; 
+    /* width: 60%;  */
     padding: 7px;
     font-size: 0.9rem;
     border: 1px solid var(--Neutral-400, #94a3b8);
     border-radius: 10px;
     box-sizing: border-box;
     min-height: 1.2rem;
+    /* max-height: 80%; */
+  }
+
+  @media (max-width: 600px){
+    .bigInput {
+      width: 90%; 
+    }
+  }
+
+  @media (min-width: 601px){
+    .bigInput {
+      width: 60%; 
+    }
   }
 
   .inputWithSendIcon {
@@ -146,16 +160,18 @@
 }
 
 .responseContent {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
+  display: block;
+  flex-direction: column
+  /* margin-bottom: 0.4rem; */
 }
 
 
 @media (min-width: 601px){
   .responseContent {
-    padding-left: 15%;
-    padding-right: 15%;    
+    /* width: 192%; */
+    /* background-color: red; */
+    /* padding-left: 20%;
+    padding-right: 20%;   */
   }
 }
 
@@ -206,10 +222,9 @@
 @media (min-width: 601px){
   .SendButton {
     position: absolute;
-    right:15.5%;
-    bottom: 0.5rem;
-    z-index: 999;
-    height: 1.7rem
+    height: 1.8rem;
+    bottom: 10%;
+    right: 1rem;
   } 
 }
 
@@ -218,7 +233,7 @@
   position: absolute;
   height: 1.7rem;
   z-index: 999;
-  bottom: -0.7rem ;
+  bottom: 0.2rem ;
   right: 1rem;
   /* top:1rem */
 }
